// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toDot render edge 1`] = `
"digraph {
  \\"a\\";
  \\"b\\";
  \\"a\\" -> \\"b\\";
}"
`;

exports[`toDot render subgraph 1`] = `
"digraph {
  subgraph {
    \\"a\\";
    \\"b\\";
    \\"a\\" -> \\"b\\";
  }
}"
`;

exports[`toDot render works 1`] = `
"digraph {
  \\"a\\";
  \\"b\\";
}"
`;
